--- a/06.The Table method.md
+++ b/06.The Table method.md
@@ -1,6 +1,7 @@
 We have anothere method to solve the mathematical models which is called Tablo method. Main differences between this and graphical method are:
 1) Graphical method can be only used whenever there are only two decision variables. However, for Tablo method, there is no limit for this.
 2) Graphical method can be used to find both max and min (if defined). However, tablo method can find only max value.
+3) Table method can solve the models whenever objective function P = a*x1+b*x2 <= n. If that is >=, we cannot use this method here.
 ---
 
 🔹 **Slack variables** are **extra variables** added to **≤ (less than or equal to) constraints** in a linear programming problem to **convert inequalities into equalities**. They represent the **unused resources** in a constraint.
@@ -41,7 +42,8 @@ In the **basic feasible solutions**, the variables which are equal to 0 are **no
 - We will create a table, where there should be ( (m + 2) * (m + 1) / 2 ) rows and (m + 2) columns. Here m is the number of contraint functions. 
 	Imagine we have two constraints: x1+2*x2<=32; 3*x1+4*x2<=84; x1, x2>=0 and P=50*x1+80*x2
 		
-In table for each row, we need to put 2 zeros in each combination.
+In table for each row, we need to put 2 zeros in each combination. For each row, according to these, we will calculate other variables.
+For the first column we put 0 for x1 and x2 and find s1 and so on...
 
 | x1  | x2  | s1  | s2  |
 | --- | --- | --- | --- |
@@ -51,6 +53,9 @@ In table for each row, we need to put 2 zeros in each combination.
 |     | 0   | 0   |     |
 |     | 0   |     | 0   |
 |     |     | 0   | 0   |
+Solved version of this table: 
+![[solved_table.png]]
+
 - For the case when there is undefined equality or an equality with infinite solution, we will not write this row in the table. 
 - After calculating main variables, we put the rows(with nonnegative variables) in objective function and find max value.
 
